Closed Bug 2029333 Opened 4 days ago Closed 7 hours ago

Attachment to a draft from Apple Mail vanishes when chosing to edit

Categories

(Thunderbird :: Message Compose Window, defect)

defect

Tracking

(thunderbird149 affected)

RESOLVED FIXED
151 Branch
Tracking Status
thunderbird149 --- affected

People

(Reporter: mozilla, Assigned: mozilla)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Steps to reproduce:

  • Create a draft in Apple Mail on macOS 26
  • Paste a .pdf file in it by Ctrl+V
  • Save draft in Apple Mail
  • Open draft in Thunderbird Daily
  • Press edit there
  • Save

Actual results:

The in-line attachment is displayed as a normal attachment in the viewer but vanishes entirely in the draft editor. Saving that deletes the attachment from the draft.

Expected results:

The in-line attachment should be detected by the draft editor and preserved, even if converted to a normal attachment in the process.


This also seems to affect pressing forward.

Simpler steps to reproduce the same core issue:

  • Open related-inline-pdf-draft.eml
  • Observe correct display of pdf-sample_0.pdf as an attachment (possible and safe to open, but not necessary)
  • Try to forward the e-mail
  • Observe that the attachment is gone
Assignee: nobody → mozilla
Status: NEW → ASSIGNED
See Also: → 558128
See Also: → 753215
See Also: → 1362539

@Francesco Bug 1362539 is confirmed not improving with this patch, only related in the way that it's something some flavour of Apple Mail produces and Thunderbird chokes on.

Understood, your fix is for draft processing, the other one is about message display. However, the root cause seems to be the invalid MIME structure used by Apple Mail that puts the attachment into the worng MIME part.

In different ways.

To my understanding this in-line is compliant but very weird especially that you can't attach in another way.

And some slightly invalid MIME is supported better in the patch.

Target Milestone: --- → 151 Branch
Version: Thunderbird 151 → 3.1

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/e7f9e4b69ee8
Preserve multipart/related attachments when editing or forwarding. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 7 hours ago
Resolution: --- → FIXED
See Also: → 408114
Duplicate of this bug: 558128
See Also: 558128
Duplicate of this bug: 408114
See Also: 408114
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: