Bug 2029333 - Preserve multipart/related attachments when editing or forwarding. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D292070

--HG--
extra : amend_source : 5603e50176667c5c5f1141f9fe137057258b749e